finally fixed mobile css to stop overflow

--- a/style.css
+++ b/style.css
@@ -8,6 +8,11 @@ body {
   font-family: "Poppins", sans-serif;
 }
 
+.wrapper{
+  max-width: 100vw;
+  overflow-x: hidden;
+}
+
 nav {
   position: fixed;
   display: flex;
@@ -982,7 +987,7 @@ div.languages-form select {
 @media screen and (max-width: 600px) {
   nav{
     padding: 0.4rem 2rem;
-    width: 85%;
+    width: 100%;
   }
   nav div.links a.get-gmail {
     display: none;
